Fix position:sticky location bug when scroller is not a stacking context

This was broken in http://crrev.com/e481938 when I added code to correct
for scroll offset in intermediate layers - that logic is invalid if we
arent a LayerTree descendent of the scroller.

The reason that we didn't spot that this was broken is that we keep
using will-change:transform to force-enable compositing of elements, but
this also creates a stacking context. For now I have switched this to
backface-visibility:hidden, which isn't perfect but at least doesn't
create a stacking context.

BUG=699137
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2765503003
Cr-Commit-Position: refs/heads/master@{#459546}

Former-commit-id: d5514f08a923485a8ef2a58cab355893d0e55fcb